# study

./: .gitignore  CLAUDE.md  PROJECT_BRIEF.md  PROJECT_STATUS.md  README.md  index.html  package-lock.json  package.json  release.sh  study.jsx  vite.config.js
.claude/: CLAUDE.md
.vexp/: manifest.json
agents/: EDUCATIONAL_RESEARCH_ANALYST.md  STUDY_DATA_ANALYST.md  STUDY_DEVELOPER.md  STUDY_DOCUMENTATION_ANALYST.md  STUDY_PRODUCT_ANALYST.md  STUDY_SECURITY_TESTING_ANALYST.md  STUDY_SYSTEMS_ANALYST.md  STUDY_UX_DESIGNER.md  STUDY_UX_RESEARCH_ANALYST.md  STUDY_UX_VALIDATOR.md
docs/: DEV_TROUBLESHOOTING.md  SQLITE_MIGRATION.md  artifact-white-screen-debugging-guide.md  buzz-macos-install-guide.md  buzz-macos-troubleshooting.md  epub-docx-parser-spec.md  ies-implementation-spec.md  lecture-transcription-guide.md  migration-guide.md  practice-mode-spec.md  prompt-templates.md  study-artifact-legacy.jsx  study-prompts-draft.md  tauri-implementation-steps.md  tauri-migration-guide.md  v1-schema-archive.md
knowledge/: KNOWLEDGE_INDEX.md
src/: App.jsx  ScreenRouter.jsx  StudyContext.jsx  (+1 more)
src-tauri/: .taurignore  Cargo 2.toml  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  001_v2_schema.sql  002_skill_extraction_v2.sql  003_assignments.sql  004_last_rating.sql  005_facets.sql  006_assignment_activation.sql  007_material_images.sql  008_skill_courses.sql  009_chunk_relationships.sql  010_session_exchanges.sql
src-tauri/src/: lib.rs  main.rs
(+417 files in other folders)
