[package]
name = "study"
version = "0.1.0"
description = "AI-powered learning companion"
authors = ["Mark Lehn"]
edition = "2021"

[lib]
name = "study_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev]
# Fast dev builds — skip optimizations, maximize incremental compile speed
opt-level = 0
debug = 0           # Skip debug symbols (faster link)
incremental = true  # Incremental compilation (default, but explicit)

[profile.dev.package."*"]
# Optimize dependencies even in dev (they don't change often)
opt-level = 2

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
